// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/modal/SeriesModal renders open 1`] = `
<div
  class="Modal__Bootstrap modal-dialog modal-lg"
  data-testid="modal-series-245-2500"
>
  <div
    class="modal-content"
  >
    <div
      class="modal-header"
    >
      <button
        aria-label="Close"
        class="close"
        type="button"
      >
        <span
          class="glyphicon glyphicon-remove"
        />
      </button>
      <h4
        class="modal-title"
      >
        Tracks for 13th Week iRacing Figure GR8
      </h4>
    </div>
    <div
      class="modal-body"
      style="max-height: 55vh; overflow-y: auto;"
    >
      <div
        class="container-fluid"
      >
        <div
          class="table-responsive"
        >
          <table
            class="table"
            style="font-size: 0.8em;"
          >
            <thead>
              <tr>
                <th>
                  Week
                </th>
                <th>
                  Track
                </th>
                <th>
                  Start
                </th>
                <th>
                  End
                </th>
                <th>
                  Length
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td>
                  1
                </td>
                <td
                  class="success"
                >
                  Irwindale Speedway - Figure Eight
                </td>
                <td>
                  September 6, 2022
                </td>
                <td>
                  September 6, 2022
                </td>
                <td>
                  <div>
                    25L
                  </div>
                </td>
              </tr>
              <tr
                style="font-weight: 700;"
              >
                <td>
                  2
                </td>
                <td
                  class="success"
                >
                  Irwindale Speedway - Figure Eight Jump
                </td>
                <td>
                  September 7, 2022
                </td>
                <td>
                  September 7, 2022
                </td>
                <td>
                  <div>
                    25L
                  </div>
                </td>
              </tr>
              <tr>
                <td>
                  3
                </td>
                <td
                  class="success"
                >
                  Irwindale Speedway - Figure Eight
                </td>
                <td>
                  September 8, 2022
                </td>
                <td>
                  September 8, 2022
                </td>
                <td>
                  <div>
                    25L
                  </div>
                </td>
              </tr>
              <tr>
                <td>
                  4
                </td>
                <td
                  class="success"
                >
                  Irwindale Speedway - Figure Eight Jump
                </td>
                <td>
                  September 9, 2022
                </td>
                <td>
                  September 9, 2022
                </td>
                <td>
                  <div>
                    25L
                  </div>
                </td>
              </tr>
              <tr>
                <td>
                  5
                </td>
                <td
                  class="success"
                >
                  Irwindale Speedway - Figure Eight
                </td>
                <td>
                  September 10, 2022
                </td>
                <td>
                  September 10, 2022
                </td>
                <td>
                  <div>
                    25L
                  </div>
                </td>
              </tr>
              <tr>
                <td>
                  6
                </td>
                <td
                  class="success"
                >
                  Irwindale Speedway - Figure Eight Jump
                </td>
                <td>
                  September 11, 2022
                </td>
                <td>
                  September 11, 2022
                </td>
                <td>
                  <div>
                    25L
                  </div>
                </td>
              </tr>
              <tr>
                <td>
                  7
                </td>
                <td
                  class="success"
                >
                  Irwindale Speedway - Figure Eight
                </td>
                <td>
                  September 12, 2022
                </td>
                <td>
                  September 12, 2022
                </td>
                <td>
                  <div>
                    25L
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
    <div
      class="modal-footer"
    >
      <button
        class="btn btn-primary"
        type="button"
      >
        Close
      </button>
    </div>
  </div>
</div>
`;

exports[`components/modal/SeriesModal renders with cars 1`] = `
<div
  class="Modal__Bootstrap modal-dialog modal-lg"
  data-testid="modal-series-245-2550"
>
  <div
    class="modal-content"
  >
    <div
      class="modal-header"
    >
      <button
        aria-label="Close"
        class="close"
        type="button"
      >
        <span
          class="glyphicon glyphicon-remove"
        />
      </button>
      <h4
        class="modal-title"
      >
        Tracks for 13th Week iRacing Figure GR8
      </h4>
    </div>
    <div
      class="modal-body"
      style="max-height: 55vh; overflow-y: auto;"
    >
      <div
        class="container-fluid"
      >
        <div
          class="table-responsive"
        >
          <table
            class="table"
            style="font-size: 0.8em;"
          >
            <thead>
              <tr>
                <th>
                  Week
                </th>
                <th>
                  Track
                </th>
                <th>
                  Car
                </th>
                <th>
                  Start
                </th>
                <th>
                  End
                </th>
                <th>
                  Length
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td>
                  1
                </td>
                <td
                  class="success"
                >
                  Irwindale Speedway - Figure Eight
                </td>
                <td
                  class=""
                >
                  Rallycross, Pro 2 Truck
                </td>
                <td>
                  September 6, 2022
                </td>
                <td>
                  September 6, 2022
                </td>
                <td>
                  <div>
                    25L
                  </div>
                </td>
              </tr>
              <tr
                style="font-weight: 700;"
              >
                <td>
                  2
                </td>
                <td
                  class="success"
                >
                  Irwindale Speedway - Figure Eight Jump
                </td>
                <td
                  class=""
                >
                  Rallycross, Pro 2 Truck
                </td>
                <td>
                  September 7, 2022
                </td>
                <td>
                  September 7, 2022
                </td>
                <td>
                  <div>
                    25L
                  </div>
                </td>
              </tr>
              <tr>
                <td>
                  3
                </td>
                <td
                  class="success"
                >
                  Irwindale Speedway - Figure Eight
                </td>
                <td
                  class=""
                >
                  Rallycross, Pro 2 Truck
                </td>
                <td>
                  September 8, 2022
                </td>
                <td>
                  September 8, 2022
                </td>
                <td>
                  <div>
                    25L
                  </div>
                </td>
              </tr>
              <tr>
                <td>
                  4
                </td>
                <td
                  class="success"
                >
                  Irwindale Speedway - Figure Eight Jump
                </td>
                <td
                  class=""
                >
                  Rallycross, Pro 2 Truck
                </td>
                <td>
                  September 9, 2022
                </td>
                <td>
                  September 9, 2022
                </td>
                <td>
                  <div>
                    25L
                  </div>
                </td>
              </tr>
              <tr>
                <td>
                  5
                </td>
                <td
                  class="success"
                >
                  Irwindale Speedway - Figure Eight
                </td>
                <td
                  class=""
                >
                  Rallycross, Pro 2 Truck
                </td>
                <td>
                  September 10, 2022
                </td>
                <td>
                  September 10, 2022
                </td>
                <td>
                  <div>
                    25L
                  </div>
                </td>
              </tr>
              <tr>
                <td>
                  6
                </td>
                <td
                  class="success"
                >
                  Irwindale Speedway - Figure Eight Jump
                </td>
                <td
                  class=""
                >
                  Rallycross, Pro 2 Truck
                </td>
                <td>
                  September 11, 2022
                </td>
                <td>
                  September 11, 2022
                </td>
                <td>
                  <div>
                    25L
                  </div>
                </td>
              </tr>
              <tr>
                <td>
                  7
                </td>
                <td
                  class="success"
                >
                  Irwindale Speedway - Figure Eight
                </td>
                <td
                  class=""
                >
                  Rallycross, Pro 2 Truck
                </td>
                <td>
                  September 12, 2022
                </td>
                <td>
                  September 12, 2022
                </td>
                <td>
                  <div>
                    25L
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
    <div
      class="modal-footer"
    >
      <button
        class="btn btn-primary"
        type="button"
      >
        Close
      </button>
    </div>
  </div>
</div>
`;
